# zipper

./: README.md  pyproject.toml
app/: main.py
app/base/: metric_model.py
app/utils/: path_utils.py  url.py
compresslib/: main.py
compresslib/algorithms/: huffman.py  lzw.py
compresslib/base/: abstract.py  enums.py  metric_model.py
tests/: huffman_test.py  lzw_test.py
