[tool.poetry]
name = "compresslib"
version = "0.1.2"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
zipper = "compresslib.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
pydantic = "^2.7.4"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
